--- a/src/assets/scss/chrome/_toolbar.scss
+++ b/src/assets/scss/chrome/_toolbar.scss
@@ -2,6 +2,6 @@
 
 .toolbar {
   position: relative;
-  z-index: 2;
+  z-index: 4; // @TODO add to z-index map
   display: flex;
 }
